# rust-web

./: .air.toml  .gitignore  Cargo.toml  Procfile  README.md  build.rs  build.sh  config.toml
src/: main.rs
static/: global.min.css
templates/: base.html  design.html  hello.html  index.html  layout-design.html  layout-main.html  name.html
