[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-settings = "0.6.0"
env_logger = "0.9.1"
bytes = "1.2.1"
actix-files = "0.6.2"
lightningcss = "1.0.0-alpha.34"
tera = "1.17.0"
actix-web-static-files = "4.0.0"
static-files = "0.2.3"

[build-dependencies]
static-files = "0.2.1"
lightningcss = "1.0.0-alpha.34"
actix-files = "0.6.2"